@@ -11,28 +11,27 @@ import java.util.NoSuchElementException;
 public class StringQueue implements IQueue {
 
   private List<String> elements = new ArrayList<String>();
-  private int maxSize = 5;
+  private final int maxSize;
 
   public StringQueue(int maxsize) {
-    maxSize = maxSize;
+    this.maxSize = maxsize;
   }
 
   @Override
   public boolean offer(String obj) {
-    if (elements.size() != maxSize)
+    if (elements.size() != maxSize){
       elements.add(obj);
-    else
-      return false;
-
-    return true;
+      return true;
+    }
+    return false;
   }
 
   @Override
   public String poll() {
     String element = peek();
 
-    if (elements.size() == 0) {
-      elements.remove(0);
+    if (!elements.isEmpty()) {
+      elements.remove(element);
     }
 
     return element;
@@ -41,7 +40,7 @@ public class StringQueue implements IQueue {
   @Override
   public String remove() {
     String element = poll();
-    element = "";
+
     if (element == null)
       throw new NoSuchElementException("there's no element any more");
 
@@ -50,11 +49,11 @@ public class StringQueue implements IQueue {
 
   @Override
   public String peek() {
-    String element;
-    if (elements.size() > 0)
-      element = elements.get(0);
-    else
-      element = null;
+    String element = null;
+
+    if (elements.size() > 0){
+      element = elements.getFirst();
+    }
 
     return element;
   }
@@ -68,4 +67,4 @@ public class StringQueue implements IQueue {
     return element;
   }
 
-}s
+}
